syntax = "proto3";
package model;
option go_package = "/model/pb";

message Product {
  string id = 1 ;
  string name = 2;
  string description = 3 ;
  string uom = 4   ;
  string image = 5 ;
  double price = 6 ;
  int64 stock = 7 ;
  int64 createdAt = 8 ;
  int64 updatedAt = 9 ;
  int64 discardedAt = 10 ;
}

// Find Products With Paginate
message FindProductsWithPaginationRequest {
  repeated string ids = 1;
  repeated string name = 2;
  int32 page = 3;
  int32 limit = 4;
}

message FindProductsWithPaginationResponse {
  map <string, Product> products = 1;
  int32 limit = 2;
  int32 page = 3;
}

message FindProductByIdRequest {
  string id = 1;
}